layout for medium and small screens

--- a/src/scss/_flight-list.scss
+++ b/src/scss/_flight-list.scss
@@ -1,6 +1,6 @@
 section.flights-list {
   width: 100%;
-  margin-left: calc($search-settings-width + 20px);
+  margin-left: calc($search-settings-width);
   margin-top: 1em;
   .flight-card {
     margin-top: 2em;
