--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,8 @@
 @import 'container';
 @import 'search-settings';
 @import 'flight-list';
+@import 'app-header';
+@import 'screen_medium';
 
 body {
   font-family: 'roboto';
