fix small screen layout

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'flight-list';
 @import 'app-header';
 @import 'screen_medium';
+@import 'screen_small';
 
 body {
   font-family: 'roboto';
