--- a/src/scss/_flight-list.scss
+++ b/src/scss/_flight-list.scss
@@ -32,6 +32,10 @@ section.flights-list {
         padding: $card-info-padding;
         font-size: medium;
         border-bottom: 1px solid rgb(225, 225, 225);
+        .route-point,
+        .route-arrow {
+          display: inline;
+        }
         .airport-uid {
           color: $main-color;
         }
